--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1685,107 +1685,107 @@ stories:
   domain: http://www.wapakdailynews.com/
   link: https://www.wapakdailynews.com/content/county-fair-officials-searching-sign-solutions
 images:
-- name: carry-load-carryload-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-satan-red.jpg
-- name: sand-hand-sand-hand-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit.jpg
-- name: downtown-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-soul.jpg
-- name: copper-circuit-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-berline-wall-old-building.jpg
-- name: statue-of-liberty-front-view-statueofliberty-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-cinnamon-rolls.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-attack-planes.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-- name: border-fence-border-fence-on-hill-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
-- name: copper-circuit-san-francisco-salesforce-bay-bridge.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-salesforce-bay-bridge.jpg
-- name: catacombs-catacombs-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-creativity.jpg
-- name: flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-- name: braceros-domingo-ulloa-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-face-eyes-open-statue.jpg
-- name: stalin-time-waterfront-in-italy-mist.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-waterfront-in-italy-mist.jpg
-- name: server-racks-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-smooth-ride.jpg
-- name: bf-skinner-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
-- name: art-museum-art-museum-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit.jpg
-- name: copper-circuit-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-butterfly-purple-flower.jpg
-- name: copper-circuit-old-gas-station_35891228584_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_35891228584_o.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-- name: braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-- name: old-church-oldchurch-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
-- name: nazi-invasion-container-ship-in-seattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-container-ship-in-seattle.jpg
-- name: old-granary-field-oldhouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-spagetti-accident.jpg
-- name: cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-- name: stories-window-mountain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-mountain-clean-view.jpg
-- name: bf-skinner-statue-playing-instrument.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-playing-instrument.jpg
-- name: blossombar-crafty-painting-file-00-00-50-25.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
-- name: old-door-lock-old-door-lock-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-attack-planes.jpg
-- name: old-barn-old-barn-1500-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-soul.jpg
-- name: mediterranean-mediterranean-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-graham-sutherland.jpg
-- name: eduardo-eduardo-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-clean-view.jpg
-- name: server-cloud-server-racks-door-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-china-prop.jpg
-- name: crow_diego_rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_diego_rivera1.jpg
-- name: fence-mexico-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-mucha-mult.jpg
-- name: mosaic-face-mosaic-face-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-monet-one.jpg
-- name: bf-skinner-london-underground-covent-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-london-underground-covent-garden.jpg
-- name: stalin-time-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cannon_36556797762_o.jpg
-- name: oldhouse-oldhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
-- name: old-barn-old-barn-1500.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500.jpg
-- name: catacombs-catacombs-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-umberto-bocc.jpg
-- name: status-berlin-status-berlin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
-- name: dc-statue-dcstatue-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-hot-spicy.jpg
-- name: sand-hand-sand-hand-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-umberto-bocc.jpg
-- name: school-clouds-church-clouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-paper.jpg
-- name: supreme-court-supremecourt-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-attack-planes.jpg
-- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
-- name: server-cloud-server-racks-clouds-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-cinnamon-rolls.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-- name: mediterranean-mediterranean-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-emily-carr.jpg
+- name: status-berlin-status-berlin-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-dream.jpg
+- name: border-crossing-bordercrossing-purple-pond.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-pond.png
+- name: stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
+- name: old-house-oldhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-mucha-mult.jpg
+- name: aws-s3-dunes-dunes-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-600.jpg
+- name: copper-circuit-san-francisco-skyline-smoke.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-skyline-smoke.jpg
+- name: gypsy-wagon-gypsywagon-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crabapple.jpg
+- name: window-window-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smooth-ride.jpg
+- name: copper-circuit-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eagle-spread-tree-2.jpg
+- name: walled-garden-walled-garden-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
+- name: copper-circuit-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line-2.jpg
+- name: bordercrossing-bordercrossing-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-emily-carr.jpg
+- name: amusement-park-amusement-park-2-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit-2.jpg
+- name: beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
+- name: status-berlin-status-berlin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still.jpg
+- name: miamibeach-miamibeach-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alberto-giacometti.jpg
+- name: catacombs-catacombs-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-color.jpg
+- name: nyc-flag-nycflag-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
+- name: border-crossing-bordercrossing-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-circuit.png
+- name: border-crossing-bordercrossing-sand-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-sand-paper.png
+- name: bordercrossing-bordercrossing-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alberto-giacometti.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+- name: subway-subway-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
+- name: oldhouse-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-two.jpg
+- name: bluelake-plentiful-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-38-67.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: art-museum-art-museum-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
+- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
+- name: rain-princess-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-adam-smith-edinburgh.jpg
+- name: aws-s3-square-containership-dark-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-containership-dark-dali-square.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
+- name: ellis-island-ellisisland-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-far-away.jpg
+- name: nazi-invasion-docks-in-itealy-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-in-itealy-tower.jpg
+- name: lincoln-memorial-lincolnmemorial-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-missle.jpg
+- name: dragon-desert-desert-dragon-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+- name: nazi-invasion-IMG_4721.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4721.jpg
+- name: oldroad-old-road-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dry-skin.jpg
+- name: bf-skinner-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
+- name: amusement-park-amusement-park-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-bright-sand.jpg
+- name: dragon-desert-desert-dragon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kand-two.jpg
+- name: downtheline-downtheline-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gan-vogh.jpg
+- name: supreme-court-supremecourt-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
+- name: dc-statue-dcstatue-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crabapple.jpg
+- name: udnie-IMG_2410.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2410.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-brush.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+- name: old-door-lock-old-door-lock-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-space-pizza.jpg
+- name: old-granary-field-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
 ---
 Holiday Explosion Is Saturday.&nbsp;Local Couple Indicted For Child Pornography.&nbsp;Hundreds Rally In Pittsburgh In Support Of Impeaching President Trump.&nbsp;Zippy's To Serve Dave's Ice Cream In All Hawaii Restaurants.&nbsp;NickI Minaj Calls For 'less Politics' In Rap.&nbsp;Local Rider Gets Ready For First World Finals.&nbsp;Names In The News.&nbsp;Year On, Amnesty Urges Sudan Deliver On Protesters' Demands.&nbsp;
